Update PROJECT_STATUS.md — sync architecture and remaining work